Added actual web address

--- a/index.html
+++ b/index.html
@@ -5,35 +5,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- SEO -->
-  <title>Подготовка к собеседованию Karta Polaka — бот AI</title>
-  <meta name="description" content="Практикуйте реальные вопросы Karta Polaka и Pobyt Stały с умным Telegram‑ботом. Симуляция интервью с ИИ, тесты с картинками, сотни успешных историй." />
+  <title>Karta Polaka: подготовка к интервью — Telegram бот</title>
+  <meta name="description" content="Готовьтесь к Karta Polaka и Pobyt Stały: интервью‑симуляция с ИИ, тесты с изображениями и объяснениями. Сотни уже успешно сдали." />
   <meta name="keywords" content="Karta Polaka, подготовка, Pobyt Stały, польские корни, Telegram бот, симулятор интервью" />
   <meta name="author" content="pytania_KartaPolaka_bot" />
   <meta name="theme-color" content="#c62828" />
   <meta name="robots" content="index, follow, max-image-preview:large" />
 
   <!-- Open Graph / Social -->
-  <meta property="og:title" content="Подготовка к собеседованию Karta Polaka — бот AI" />
-  <meta property="og:description" content="Практикуйте реальные вопросы Karta Polaka и Pobyt Stały с умным Telegram‑ботом. Симуляция интервью с ИИ, тесты с картинками, сотни успешных историй." />
-  <meta property="og:image" content="/assets/sample1.jpg" />
+  <meta property="og:title" content="Karta Polaka: подготовка к интервью — Telegram бот" />
+  <meta property="og:description" content="Готовьтесь к Karta Polaka и Pobyt Stały: интервью‑симуляция с ИИ, тесты с изображениями и объяснениями. Сотни уже успешно сдали." />
+  <meta property="og:image" content="https://learnpolish.click/assets/sample1.jpg" />
   <meta property="og:image:alt" content="Przykładowe pytanie Karta Polaka" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://yourdomain.example/" />
+  <meta property="og:url" content="https://learnpolish.click/" />
   <meta property="og:site_name" content="pytania_KartaPolaka_bot" />
   <meta property="og:locale" content="ru_RU" />
   <meta property="og:locale:alternate" content="pl_PL" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Подготовка к собеседованию Karta Polaka — бот AI" />
-  <meta name="twitter:description" content="Практикуйте реальные вопросы Karta Polaka и Pobyt Stały с умным Telegram‑ботом. Симуляция интервью с ИИ, тесты с картинками, сотни успешных историй." />
-  <meta name="twitter:image" content="/assets/sample1.jpg" />
+  <meta name="twitter:title" content="Karta Polaka: подготовка к интервью — Telegram бот" />
+  <meta name="twitter:description" content="Готовьтесь к Karta Polaka и Pobyt Stały: интервью‑симуляция с ИИ, тесты с изображениями и объяснениями. Сотни уже успешно сдали." />
+  <meta name="twitter:image" content="https://learnpolish.click/assets/sample1.jpg" />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://yourdomain.example/" />
+  <!-- Canonical & hreflang -->
+  <link rel="canonical" href="https://learnpolish.click/" />
+  <link rel="alternate" hreflang="ru" href="https://learnpolish.click/" />
+  <link rel="alternate" hreflang="pl" href="https://learnpolish.click/" />
+  <link rel="alternate" hreflang="x-default" href="https://learnpolish.click/" />
 
-  <!-- Favicons (place in /assets) -->
-  <link rel="icon" href="/assets/logo.jpg" type="image/svg+xml" />
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/logo.svg" type="image/svg+xml" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="/css/style.css" />
@@ -49,7 +52,8 @@
     "operatingSystem": "Android, iOS, Web",
     "inLanguage": ["ru", "pl"],
     "offers": {"@type": "Offer", "price": "0", "priceCurrency": "USD"},
-    "description": "Телеграм‑бот с ИИ для практики реальных вопросов Karta Polaka и Pobyt Stały."
+    "description": "Телеграм‑бот с ИИ для практики реальных вопросов Karta Polaka и Pobyt Stały.",
+    "sameAs": ["https://t.me/pytania_KartaPolaka_bot", "https://learnpolish.click/"]
   }
   </script>
 </head>
@@ -57,7 +61,7 @@
   <header class="site-header" role="banner">
     <div class="container">
       <a class="logo" href="#" aria-label="Главная">
-        <img src="/assets/logo.jpg" alt="Логотип pytania_KartaPolaka bot" height="48" fetchpriority="high" />
+        <img src="/assets/logo.svg" alt="Логотип pytania_KartaPolaka bot" height="48" fetchpriority="high" />
       </a>
       <nav class="top-controls" aria-label="Верхнее меню">
         <div class="lang-switch" role="group" aria-label="Переключение языка">
