Replaced logo.svg

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel="alternate" hreflang="x-default" href="https://learnpolish.click/" />
 
   <!-- Favicon -->
-  <link rel="icon" href="/assets/logo.svg" type="image/svg+xml" />
+  <link rel="icon" href="/assets/logo.jpg" type="image/svg+xml" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="/css/style.css" />
@@ -61,7 +61,7 @@
   <header class="site-header" role="banner">
     <div class="container">
       <a class="logo" href="#" aria-label="Главная">
-        <img src="/assets/logo.svg" alt="Логотип pytania_KartaPolaka bot" height="48" fetchpriority="high" />
+        <img src="/assets/logo.jpg" alt="Логотип pytania_KartaPolaka bot" height="48" fetchpriority="high" />
       </a>
       <nav class="top-controls" aria-label="Верхнее меню">
         <div class="lang-switch" role="group" aria-label="Переключение языка">
